# guzhiqihuo

./: .gitignore  AGENTS.md  README.md  fixed-plus-stable.py  index.html  push_to_github.ps1  pyproject.toml  size-switch-stable.py  strategy-024-stable.py  strategy-024.css  strategy-024.html  ths_v69_lock_allowed_strategy.py  ths_v69_strategy_formula_reference.txt  v70_v69_stage_charts_ths_index.html
docs/: index.html  iron_ore_local_backtest.md
etf-strategy/: index.html
index-futures-v69-fixed-20260707/: index.html  v69_lock_allowed_priority_report.html  v71_vs_v69_analysis.html
index-futures-v69-single-20260707/: index.html
reports/: analyze_ths_jq_v12c_logs.py  analyze_ths_jq_v7_logs.py  analyze_wufu_v12d_fixed.py  audit_wufu_v12d_20260713.py  build_etf_minute_kline_store.py  export_paper_trading_site.py  joinquant_size_style_rotation_v21.py  joinquant_size_style_rotation_v21_readme.md  joinquant_size_style_rotation_v22_original_compatible.py  joinquant_size_style_rotation_v22_original_compatible_readme.md  joinquant_size_style_rotation_v30_original_replica.py  joinquant_size_style_rotation_v30_original_replica_readme.md  jq_fusion_etf_rotation_v1.py  jq_fusion_etf_rotation_v2_dual_slot.py  jq_iron_ore_cta_v1_2_balance.py  jq_iron_ore_cta_v1_3_risk.py  jq_iron_ore_cta_v1_4_aggressive.py  jq_iron_ore_cta_v1_5_post2024.py  jq_iron_ore_cta_v1_6_all_cycle_short.py  jq_iron_ore_cta_v1_risk.py  jq_iron_ore_cta_v2.py  jq_minute_execute.csv  jq_minute_order_errors.csv  jq_minute_signal.csv  jq_research_export_iron_ore_v1_6.py  jq_weak_state_ranges_v5.txt  (+418 more)
(+235 files in other folders)
